# velocity-field-with-particles

./: .gitignore  CMakeLists.txt  Collider.cpp  Collider.h  Emitter.cpp  Emitter.h  FGAFile.cpp  FGAFile.h  Makefile  ObjWriter.cpp  ObjWriter.h  Particle.cpp  Particle.h  ParticleSystem.cpp  README.md  Solver.cpp  Solver.h  VelocityGrid.cpp  VelocityGrid.h  parameters  parameters_smoke  parameters_snow  parameters_test  vel.74.fga  velocityFieldSimple1.23.fga
